Fixed formatting when viewing on mobile on index page.

--- a/project/project7/index-css.css
+++ b/project/project7/index-css.css
@@ -626,6 +626,22 @@ nav a:hover {
         padding-bottom: 4em;
     }
 
+    /* Hide clickIcon on mobile */
+    #nlpProj .clickIcon,
+    #xgboostProj .clickIcon,
+    #pysparkProj .clickIcon,
+    #dbProj .clickIcon {
+        display: none !important;
+    }
+
+    /* Always show callAction on mobile */
+    #nlpProj .callAction,
+    #xgboostProj .callAction,
+    #pysparkProj .callAction,
+    #dbProj .callAction {
+        display: inline-block !important;
+    }
+
     /* Contact Section */
     #contactMe {
         flex-direction: column;
